src/components/website/mapApp/MapAppHeader.scss
.map-app-header {
    width: 100%;

    display: flex;
    flex-direction: row;
    justify-content: space-between;

    .map-app-header-block-container {
        position: absolute;
        top: 20px;

        display: flex;
        flex-direction: row;
        align-items: center;
        gap: 16px;
    }

    .map-app-header-block-container:first-of-type {
        left: 20px;
        justify-content: flex-start;
    }

    .map-app-header-block-container:last-of-type {
        right: 20px;
        justify-content: flex-end;
    }

    .map-app-header-block {
        height: 46px;

        background-color: #000000;

        padding: 0 20px;

        border: 1px solid #454545;
        border-radius: 10px;

        display: flex;
        flex-direction: row;
        align-items: center;
        gap: 8px;
    }

    .map-app-header-block:has(input:focus) {
        border: 1px solid #ACF709;
    }

    .map-app-header-brand-logo {
        height: 20px;
        width: 20px;
    }

    .map-app-header-brand-text {
        font-size: 20px;
        font-weight: 500;
        line-height: 19px;
        color: #FFFFFF;
    }

    .map-app-header-user-button {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        gap: 8px;

        padding-right: 12px;
    }

    .map-app-header-account-image {
        height: 100%;
        width: 100%;
    }

    .map-app-header-account-text {
        font-size: 14px;
        font-weight: 500;
        line-height: 17px;

        color: #FFFFFF;

        text-decoration: underline;
    }
}

.terminal-search-header-block {
    max-width: 310px;
    width: 100%;

    .terminal-search-input {
        color: #FFFFFF90;

        font-family: Inter, sans-serif;
        font-size: 14px;
        font-weight: 500;
        line-height: 16.94px;
        text-align: left;
    }
}

.user-points-header-block {
    .user-points {
        color: #FFFFFF90;

        font-family: Inter, sans-serif;
        font-size: 14px;
        font-weight: 500;
        line-height: 16.94px;
    }

    .user-points:first-of-type {
        color: #FFFFFF;
    }
}

